# algo-trading-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md
infra/grafana/: README.md
infra/prometheus/: prometheus.yml
scripts/: demo.py  fetch_data.py  ib_smoke.py
src/app/: __init__.py  config.py  engine.py  main.py
src/app/api/: paper.py  routes.py
src/app/backtest/: engine.py
src/app/core/: logging.py  metrics.py  types.py
src/app/db/: models.py  session.py
src/app/execution/: base.py  ib_executor.py  paper_executor.py
src/app/market_data/: base.py  csv_provider.py  ib_provider.py  mock_provider.py
src/app/oms/: manager.py
src/app/risk/: manager.py
src/app/signals/: base.py  sma_crossover.py
src/app/web/: index.html
tests/: test_backtest.py  test_csv_provider.py  test_oms.py  test_risk.py  test_signals.py
